# Lab-PA-Vespertino-2026

./: CMakeLists.txt  README.md  main.cpp
Articulo/: Articulo.cpp  Articulo.h
ArticuloRevista/: Articulo.cpp  Articulo.h
DataType/: DTFecha.cpp  DTFecha.h  DTRefer.cpp  DTRefer.h
Investigador/: Investigador.cpp  Investigador.h
Libro/: Libro.cpp  Libro.h
PaginaWeb/: Pagina_Web.cpp  Pagina_Web.h
Publicacion/: Publicacion.cpp  Publicacion.h
